@@ -3,6 +3,7 @@
 
 	* migrating to ruby-debug-ide
 	* ability to pass base directory (needed e.g. for Rails debugging)
+	* ability to disable/enable a breakpoint
 
 0.7.0 - 0.7.1
 -------------
